# invoice

./: .gitignore  Cargo.toml
.nvim/view/: ~=+Desktop=+invoice=+.gitignore=  ~=+Desktop=+invoice=+Cargo.toml=  ~=+Desktop=+invoice=+src=+config.rs=  ~=+Desktop=+invoice=+src=+main.rs=  ~=+Desktop=+invoice=+src=+prompt.rs=  ~=+Desktop=+invoice=+src=+renderer.rs=
src/: config.rs  main.rs  prompt.rs  renderer.rs
