[package]
name = "invoice"
version = "0.1.0"
edition = "2021"
authors = ["Ales Tsurko <ales.tsurko@gmail.com>"]

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
genpdf = "0.2.0"
inquire = { version = "0.6.2", features = ["date"] }
serde = { version = "1.0.195", features = ["derive"] }
toml = { version = "0.8.8", features = ["preserve_order"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 2 # lto is disabled if codegen-units < 2
panic = "abort"
opt-level = "z" # we don't much worry about speed here
